# wing

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md  data.sql  readme.md  schema.sql
autolab_scripts/: README.md  driver.sh  p1-rubric.csv  test.py
data/: customer.tbl  lineitem.tbl  nation.tbl  orders.tbl  part.tbl  partsupp.tbl  region.tbl  supplier.tbl
docs/: pre.md
src/: main.cpp
src/catalog/: db.cpp  db.hpp  gen_pk.hpp  options.hpp  schema.hpp  stat.cpp  stat.hpp
src/common/: allocator.hpp  bitvector.hpp  bloomfilter.cpp  bloomfilter.hpp  cmdline.cpp  cmdline.hpp  error.cpp  error.hpp  exception.hpp  logging.hpp  murmurhash.cpp  murmurhash.hpp  printstack.cpp  printstack.hpp  serde.hpp  serializer.hpp  stopwatch.hpp  threadpool.hpp  util.hpp
src/execution/: delete_executor.hpp  execoptions.hpp  executor.cpp  executor.hpp  exprdata.cpp  exprdata.hpp  filter_executor.hpp  fk_checker.hpp  insert_executor.hpp  pk_checker.hpp  print_executor.hpp  project_executor.hpp  seqscan_executor.hpp
src/execution/jit/: jitexecutor.cpp  jitexpr.hpp  jitmemory.hpp  jitscan.hpp  llvmheaders.hpp
src/execution/predicate_transfer/: bf_vcreator.cpp  bf_vcreator.hpp  pt_dag.cpp  pt_dag.hpp  pt_graph.cpp  pt_reducer.cpp  pt_reducer.hpp  pt_vcreator.cpp  pt_vcreator.hpp  pt_vupdater.cpp  pt_vupdater.hpp  vb_vupdater.cpp  vb_vupdater.hpp
src/execution/vec/: expr_vexecutor.cpp  expr_vexecutor.hpp  filter_vexecutor.hpp  output_vexecutor.hpp  print_vexecutor.hpp  project_vexecutor.hpp  pt_vexecutor.hpp  seqscan_vexecutor.hpp
src/execution/volcano/: delete_executor.hpp  expr_executor.cpp  expr_executor.hpp  filter_executor.hpp  fk_checker.hpp  insert_executor.hpp  pk_checker.hpp  print_executor.hpp  project_executor.hpp  seqscan_executor.hpp
src/instance/: instance.cpp  instance.hpp  resultset.hpp
src/jit/: jitexecutor.cpp  jitexecutor.hpp  jitexpr.hpp  jitmemory.hpp  jitscan.hpp  llvmheaders.hpp
src/parser/: ast.hpp  expr.hpp  parser.cpp  parser.hpp
src/plan/: card_est.hpp  cost_based_optimizer.cpp  cost_model.hpp  expr_utils.hpp  logical_optimizer.cpp  optimizer.hpp  optimizeroptions.hpp  output_schema.hpp  plan.cpp  plan.hpp  plan_expr.hpp
src/plan/predicate_transfer/: pt_graph.cpp  pt_graph.hpp
src/plan/rules/: convert_to_hash_join.hpp  push_down_filter.hpp  push_down_join_predicate.hpp  rule.hpp
src/storage/: blob.cpp  blob.hpp  bplus-tree-storage.hpp  bplus-tree.cpp  bplus-tree.hpp  memory_storage.hpp  page-manager.cpp  page-manager.hpp  storage.hpp
src/storage/bplus_tree/: blob.cpp  blob.hpp  bplus-tree-storage.hpp  bplus-tree.cpp  bplus-tree.hpp  page-manager.cpp  page-manager.hpp
src/storage/lsm/: block.cpp  block.hpp  bloomfilter.hpp  buffer.hpp  cache.cpp  cache.hpp  common.hpp  compaction.hpp  compaction_job.hpp  compaction_pick.cpp  compaction_pick.hpp  file.cpp  file.hpp  format.hpp  iterator.hpp  iterator_heap.hpp  level.cpp  level.hpp  lsm.cpp  lsm.hpp  lsm_storage.hpp  memtable.cpp  memtable.hpp  options.hpp  sst.cpp  sst.hpp  stats.cpp  stats.hpp  version.cpp  version.hpp
src/transaction/: lock_manager.cpp  lock_manager.hpp  lock_mode.hpp  txn.hpp  txn_manager.cpp  txn_manager.hpp
src/type/: array.hpp  field.hpp  field_type.hpp  static_field.hpp  tuple.hpp  tuple_batch.cpp  tuple_batch.hpp  vector.hpp  vector_buffer.hpp
test/: CMakeLists.txt  bplus-tree.cpp  test.hpp  test_basic.cpp  test_exec.cpp  test_job.cpp  test_lsm.cpp  test_main.cpp  test_opm.cpp  test_txn.cpp  zipf.hpp
test/imdb_job/: create_table.sql  q1.sql  q2.sql  q3.sql  q4.sql
test/true_card_hints/: join11tables_cache.txt  join15tablecluster_cache.txt
